[gd_scene load_steps=12 format=3 uid="uid://cmk48ubjbc4ca"]

[ext_resource type="Script" uid="uid://xm7aylsfeh2y" path="res://scenes/title_menu.gd" id="1_ij6cu"]
[ext_resource type="Theme" uid="uid://b6jk6oy0yh58i" path="res://scenes/complex_textured_button_theme.tres" id="2_m3le7"]
[ext_resource type="PackedScene" uid="uid://bgu8pl8t1t1ry" path="res://scenes/options_menu.tscn" id="2_she06"]
[ext_resource type="Texture2D" uid="uid://ckx3yk2nd6rj6" path="res://assets/ui/pattern_0013.png" id="2_x5lbp"]
[ext_resource type="Texture2D" uid="uid://cs6hoy5cgn6wv" path="res://assets/ui/uipackSpace_sheet.png" id="3_a2du2"]
[ext_resource type="AudioStream" uid="uid://bmku3dj1s8f5o" path="res://assets/sfx/ui-select.ogg" id="6_brrgq"]
[ext_resource type="AudioStream" uid="uid://bvbm57nl02wsq" path="res://assets/sfx/ui-open.ogg" id="7_qx5l0"]
[ext_resource type="AudioStream" uid="uid://ddfkift2ohcmj" path="res://assets/sfx/ui-hide.ogg" id="8_qx5l0"]

[sub_resource type="LabelSettings" id="LabelSettings_she06"]
font_size = 64

[sub_resource type="AtlasTexture" id="AtlasTexture_a2du2"]
atlas = ExtResource("3_a2du2")
region = Rect2(200, 200, 100, 100)

[sub_resource type="LabelSettings" id="LabelSettings_a2du2"]
font_color = Color(0, 0, 0, 1)

[node name="TitleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ij6cu")

[node name="BackgroundTile" type="TextureRect" parent="."]
modulate = Color(0.39215687, 0.39215687, 0.39215687, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3840.0
offset_bottom = 2400.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_x5lbp")
stretch_mode = 1

[node name="Title" type="Label" parent="." groups=["hide_on_options"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_top = 85.0
offset_right = 350.0
offset_bottom = 264.0
grow_horizontal = 2
text = "306
SURVIVOR"
label_settings = SubResource("LabelSettings_she06")
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="." groups=["hide_on_options"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.5
offset_right = 50.0
offset_bottom = 108.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayGameButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("2_m3le7")

[node name="ButtonTexture" type="NinePatchRect" parent="ButtonContainer/PlayGameButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_a2du2")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="PlayGameButtonLabel" type="Label" parent="ButtonContainer/PlayGameButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Game"
label_settings = SubResource("LabelSettings_a2du2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_m3le7")

[node name="ButtonTexture" type="NinePatchRect" parent="ButtonContainer/OptionsButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_a2du2")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="OptionsButtonLabel" type="Label" parent="ButtonContainer/OptionsButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"
label_settings = SubResource("LabelSettings_a2du2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="ButtonContainer"]
z_index = 1
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("2_m3le7")

[node name="ButtonTexture" type="NinePatchRect" parent="ButtonContainer/QuitButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_a2du2")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="QuitButtonLabel" type="Label" parent="ButtonContainer/QuitButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit Game"
label_settings = SubResource("LabelSettings_a2du2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsMenuLayer" parent="." instance=ExtResource("2_she06")]
visible = false

[node name="HoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_brrgq")
bus = &"2_SFX"

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_qx5l0")
bus = &"2_SFX"

[node name="CloseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_qx5l0")
bus = &"2_SFX"

[connection signal="mouse_entered" from="ButtonContainer/PlayGameButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="ButtonContainer/PlayGameButton" to="." method="_on_play_game_button_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/OptionsButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="ButtonContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/QuitButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
